Bug #157417 fix: Front end>> Calendar alignment gets distorted if user added the calendar field under UCM subform tables.

--- a/src/components/com_tjucm/media/css/tjucm.css
+++ b/src/components/com_tjucm/media/css/tjucm.css
@@ -18,3 +18,8 @@ width:200px !important;
     width: 100px !important;
     height: auto;
 }
+
+ .calendar-container{
+   min-width: 260px;
+}
+
